--- a/docs/一些关键词.MD
+++ b/docs/一些关键词.MD
@@ -1,2 +1,5 @@
 - 闭包、匿名函数、元编程
 - 作用域、执行上下文、this、闭包、变量对象、词法分析
+- Object.getOwnPropertyNames()返回对象实例的常规属性数组，Object.getOwnPropertySymbols()返回对象实例的符号属性数组。这两个方法的返回值彼此互斥。Object.getOwnPropertyDescriptors()会返回同时包含常规和符号属性描述符的对象。Reflect.ownKeys()会返回两种类型
+的键：
+- 属性：实例属性，原型属性，继承属性，可枚举和不可枚举属性
